tests/syntax_error/class_init_js_syntax.jou
class Foo:
    x: int

# attempting to use javascript-style for initing class
def foo() -> void:
    foo = Foo{x: 1}  # Error: expected '=' followed by a value for field 'x', got ':'
